C project/Hashmap/error.txt
src/Main.c: In function ‘insert’:
src/Main.c:66:12: error: too few arguments to function ‘hashCode’
  int pos = hashCode(map, key);
            ^~~~~~~~
src/Main.c:37:5: note: declared here
 int hashCode(Hashmap *map, int key, int value){
     ^~~~~~~~
src/Main.c:67:29: error: expected identifier before ‘[’ token
  Node *node_sub_list = map->[pos];
                             ^
